--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -5,14 +5,16 @@
   volume  = {9},
   number  = {94},
   pages   = {6011},
-  year    = {2024}
+  year    = {2024},
+  doi     = {10.21105/joss.06011}
 }
 
 @article{torre2025python,
   title   = {Python-JAX-based fast Stokesian dynamics},
   author  = {Torre, Kim William and Schram, Raoul D and de Graaf, Joost},
   journal = {arXiv preprint arXiv:2503.07847},
-  year    = {2025}
+  year    = {2025},
+  doi     = {10.48550/arXiv.2503.07847}
 }
 
 @misc{ma2025,
@@ -20,7 +22,8 @@
   author        = {Zhan Ma and Zisheng Ye and Ebrahim Safdarian and Wenxiao Pan},
   year          = {2025},
   eprint        = {2505.08174},
-  archiveprefix = {arXiv}
+  archiveprefix = {arXiv},
+  doi           = {10.48550/arXiv.2505.08174}
 }
 
 @article{ma2022fast,
@@ -29,7 +32,8 @@
   journal = {Computer Methods in Applied Mechanics and Engineering},
   volume  = {400},
   pages   = {115496},
-  year    = {2022}
+  year    = {2022},
+  doi     = {10.1016/j.cma.2022.115496}
 }
 
 @article{ma2024shape,
@@ -38,7 +42,8 @@
   journal = {International Journal of Multiphase Flow},
   volume  = {176},
   pages   = {104845},
-  year    = {2024}
+  year    = {2024},
+  doi     = {10.1016/j.ijmultiphaseflow.2024.104845}
 }
 
 @article{shelley2016dynamics,
@@ -48,7 +53,8 @@
   volume  = {48},
   number  = {1},
   pages   = {487--506},
-  year    = {2016}
+  year    = {2016},
+  doi     = {10.1146/annurev-fluid-010814-013639}
 }
 
 @article{ParticulateReview_Maxey2017,
@@ -58,5 +64,6 @@
   volume  = {49},
   number  = {1},
   pages   = {171-193},
-  year    = {2017}
+  year    = {2017},
+  doi     = {10.1146/annurev-fluid-122414-034408}
 } 
